<resources>
    <string name="app_name">Calc</string>
    <string name="proba">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="percentage">%</string>
    <string name="reset">C</string>
    <string name="fraction">1/x</string>
    <string name="degree">x^2</string>
    <string name="root">√</string>
    <string name="division">/</string>
    <string name="multiplication">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="coma">,</string>
    <string name="sign">+/-</string>
    <string name="clear">C</string>
    <string name="back">←</string>
</resources>