<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Поле ввода чисел-->
    <TextView
        android:id="@+id/out"
        android:layout_width="385dp"
        android:layout_height="43dp"
        android:layout_marginBottom="690dp"
        android:text="@string/proba"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/in"
        android:layout_width="354dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/azure"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="29dp"
        android:layout_marginBottom="500dp"
        android:ems="10"
        android:inputType="text"
        android:text="0"
        android:textAlignment="viewEnd"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.197" />

    <!--Первая строка с кнопками-->
    <LinearLayout
        android:id="@+id/firstLine"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="662dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/white">
        <!--Кнопка выбора знака-->
        <Button
            android:id="@+id/sign"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/sign"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка ноль-->
        <Button
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка дробного числа-->
        <Button
            android:id="@+id/coma"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/coma"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
    </LinearLayout>
    <!--Вторая строка с числами-->
    <LinearLayout
        android:id="@+id/secondLine"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="570dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка один-->
        <Button
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка два-->
        <Button
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка три-->
        <Button
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
    <!--Третья строка с числами-->
    <LinearLayout
        android:id="@+id/thirdLine"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="478dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка четыре-->
        <Button
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка пять-->
        <Button
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/five"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка шесть-->
        <Button
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/six"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
    <!--Четвёртая строка с числами-->
    <LinearLayout
        android:id="@+id/fourthLine"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:layout_marginTop="386dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка семь-->
        <Button
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка восемь-->
        <Button
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
        <!--Кнопка девять-->
        <Button
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"/>
    </LinearLayout>
    <!--Пятая строка с кнопками-->
    <LinearLayout
        android:id="@+id/fifthLine"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="294dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка сложения-->
        <Button
            android:id="@+id/percentage"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/percentage"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка вычитания-->
        <Button
            android:id="@+id/root"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/root"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка умножения-->
        <Button
            android:id="@+id/multiplication"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка деления-->
        <Button
            android:id="@+id/division"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/division"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
    </LinearLayout>
    <!--Шестая строка с кнопками-->
    <LinearLayout
        android:id="@+id/sixthLine"
        android:layout_width="320dp"
        android:layout_height="100dp"
        android:layout_marginTop="202dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка деления-->
        <Button
            android:id="@+id/fraction"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/fraction"
            android:textSize="21sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка икс в степени-->
        <Button
            android:id="@+id/degree"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/degree"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка сложения-->
        <Button
            android:id="@+id/addition"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка вычитания-->
        <Button
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textSize="23sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
    </LinearLayout>

    <!--Седьмая строка с кнопками-->
    <LinearLayout
        android:id="@+id/sevenLine"
        android:layout_width="320dp"
        android:layout_height="90dp"
        android:layout_marginTop="117dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка сброса-->
        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/clear"
            android:textSize="21sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"/>
        <!--Кнопка убирающая с конца один символ-->
        <Button
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:text="@string/back"
            android:textSize="20sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/sky"
            android:textStyle="bold"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="80dp"
        android:layout_height="376dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="386dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!--Кнопка равно-->
        <Button
            android:id="@+id/subtraction"
            android:layout_width="80dp"
            android:layout_height="376dp"
            android:text="@string/equals"
            android:textSize="27sp"
            app:cornerRadius="0dp"
            android:backgroundTint="@color/azure"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>